<resources>
    <string name="app_name">BTClient Secureworld</string>
    <string name="turn_off_str">Turn Off</string>
    <string name="turn_on_str">Turn On</string>
    <string name="discoverable_str">Discoverable</string>
    <string name="get_paired_devices_str">Get Paired Devices</string>
    <string name="testBtn">Add image</string>
    <string name="messageBtn">Send message</string>
    <string name="pairedCtv"/>
    <string name="hint">hint</string>
    <string name="textInput_hint">Device number here</string>
    <string name="the_captured_photo">The captured photo</string>
    <string name="capture">Capture</string>
    <string name="fake_capture">Fake capture</string>
    <string name="no_devices">No paired devices</string>
    <string name="confirm_upload_to_google_drive">Confirm Upload to Google Drive</string>
    <string name="config">Configuration</string>
    <string name="connect">Connect</string>
    <string name="connect_to_device">Connect to %1$s</string>
    <string name="paired_list">Number - Name (Mac Address)\n</string>

    <string name="send_image">Send image</string>
    <string name="send_video">Send video</string>
    <string name="send_audio">Send audio</string>
    <string name="send_text">Send text</string>
    <string name="send_geo">Send Geolocation</string>
    <string name="send_env">Send Environment</string>
    <string name="send_json">Send JSON</string>
    <string name="send_binary">Send binary</string>

    <string name="geolocationTitle">GEOLOCATION</string>
    <string name="environmentTitle">ENVIRONMENT</string>
    <string name="gps_location">GPS Location</string>
    <string name="gps_latitude">Latitude</string>
    <string name="gps_longitude">Longitude</string>
    <string name="gps_height">Altitude (m)</string>
    <string name="gps_orientation">Orientation (º)</string>
    <string name="gps_magnetometer">Magnetometer</string>
    <string name="gps_gyroscope">Gyroscope</string>

    <string name="env_co2">CO2</string>
    <string name="env_humidity">Humidity (%)</string>
    <string name="env_temperature">Temperature (ºC)</string>
    <string name="env_pollution">Pollution</string>
    <string name="env_ozone">Ozone</string>

    <string name="update">UPDATE</string>
    <string name="send">SEND</string>
    <string name="getData">GET DATA</string>
    <string name="recordTimeText">00:00</string>
    <string name="reset">RESET</string>
</resources>