<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <Button
        android:id="@+id/pairedBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="200dp"
        android:text="@string/get_paired_devices_str"
        app:layout_constraintEnd_toEndOf="@+id/pairedTil"
        app:layout_constraintStart_toStartOf="@+id/pairedTil"
        app:layout_constraintTop_toBottomOf="@+id/discoverableBtn" />

    <Button
        android:id="@+id/turnOffBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="200dp"
        android:text="@string/turn_off_str"
        app:layout_constraintEnd_toEndOf="@+id/discoverableBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/discoverableBtn"
        app:layout_constraintTop_toBottomOf="@+id/turnOnBtn" />

    <Button
        android:id="@+id/discoverableBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minWidth="200dp"
        android:text="@string/discoverable_str"
        app:layout_constraintEnd_toEndOf="@+id/pairedBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pairedBtn"
        app:layout_constraintTop_toBottomOf="@+id/turnOffBtn" />

    <Button
        android:id="@+id/turnOnBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minWidth="200dp"
        android:text="@string/turn_on_str"
        app:layout_constraintEnd_toEndOf="@+id/turnOffBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/turnOffBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pairedTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="294dp"
        android:layout_height="119dp"
        android:layout_marginTop="24dp"
        android:hint="@string/textInput_hint"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:endIconDrawable="@drawable/ic_send"
        app:endIconMode="custom"
        app:helperText="Get paired devices\nEnter the device's number\nClick the check icon"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:helperTextTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/pairedList"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/pairedList"
        app:layout_constraintTop_toBottomOf="@+id/pairedBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pairedTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pairedList"
        android:layout_width="353dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/paired_list"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pairedTv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pairedTv"
        app:layout_constraintTop_toBottomOf="@+id/pairedTil" />

    <TextView
        android:id="@+id/pairedTv"
        android:layout_width="352dp"
        android:layout_height="172dp"
        android:layout_marginBottom="124dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedList"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>