<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<TextView -->

    <!--<Button: Turn Bluetooth On -->

    <!--<Button: Turn Bluetooth Off -->
    <!--<Button: Make Bluetooth Discoverable -->
    <!--<Button: Get list of paired devices -->
    <!--<Button: Show list of paired devices -->

    <Button
        android:id="@+id/pairedBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="200dp"
        android:text="@string/get_paired_devices_str"
        app:layout_constraintEnd_toEndOf="@+id/pairedTil"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/pairedTil"
        app:layout_constraintTop_toBottomOf="@+id/discoverableBtn" />

    <Button
        android:id="@+id/turnOnBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="200dp"
        android:text="@string/turn_on_str"
        app:layout_constraintEnd_toEndOf="@+id/turnOffBtn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/turnOffBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/turnOffBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="200dp"
        android:text="@string/turn_off_str"
        app:layout_constraintEnd_toEndOf="@+id/discoverableBtn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/discoverableBtn"
        app:layout_constraintTop_toBottomOf="@+id/turnOnBtn" />

    <Button
        android:id="@+id/discoverableBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="200dp"
        android:text="@string/discoverable_str"
        app:layout_constraintEnd_toEndOf="@+id/pairedBtn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/pairedBtn"
        app:layout_constraintTop_toBottomOf="@+id/turnOffBtn" />

    <TextView
        android:id="@+id/pairedTv"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedTil" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pairedTil"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="295dp"
        android:layout_height="97dp"
        android:layout_marginTop="28dp"
        android:hint="@string/textInput_hint"
        app:counterEnabled="true"
        app:counterMaxLength="2"
        app:endIconDrawable="@drawable/ic_check"
        app:endIconMode="custom"
        app:helperText="*Click to connect with device"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/pairedTv"
        app:layout_constraintStart_toStartOf="@+id/pairedTv"
        app:layout_constraintTop_toBottomOf="@+id/pairedBtn"
        app:startIconDrawable="@drawable/ic_cancel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pairedTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/testBtn"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:text="@string/testBtn"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/messageBtn"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedTv"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/messageBtn"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/messageBtn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/testBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/testBtn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="120dp"
        android:layout_marginBottom="36dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedTv"
        app:layout_constraintVertical_bias="0.871"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>